Fixed spacing for /values/list and /opinions for Cordova

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -73,7 +73,7 @@ $header-height-back-to-ballot-cordova: 71px;
   &__cordova-iphonex {
     margin: $space-none;
     padding-bottom: $space-xs;
-    padding-top: $space-md;
+    padding-top: $space-none;
   }
 }
 
